Updated for manual-jogging
Additional system updates

--- a/platformio.ini
+++ b/platformio.ini
@@ -27,7 +27,7 @@ lib_deps =
   Adafruit NeoPixel
   https://github.com/lincomatic/LiquidTWI2.git
   https://github.com/trinamic/TMC26XStepper.git
-build_flags = -I $BUILDSRC_DIR -fmax-errors=5
+build_flags = -I $BUILDSRC_DIR -fmax-errors=5 -w
 
 [env:megaatmega2560]
 platform = atmelavr
